[package]
name = "rush"
version = "0.1.0"
edition = "2018"

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
cranelift = "0.114.0"
cranelift-jit = "0.114.0"
cranelift-module = "0.114.0"
cranelift-native = "0.114.0"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
lazy_static = "1.5.0"
logos = "0.14.3"
